--- a/Project_sem_3/Views/Home/MedicalInsurance.cshtml
+++ b/Project_sem_3/Views/Home/MedicalInsurance.cshtml
@@ -28,9 +28,9 @@
                 <div id="ctl19_divdetail">
                     <p>
                         @*<div class="block_button top_button myriad_pro_semibold">
-                            <a href="https://localhost:44362/HealthInsurance/Information">CHARGE & ORDER</a></div>*@
+                            <a href="HealthInsurance/Information">CHARGE & ORDER</a></div>*@
                         
-                        <button style="background-color:red;color:white" onclick="location.href='/MedicalInsurance/Order'" type="button">
+                        <button style="background-color:red;color:white" onclick="window.location.href = '/MedicalInsurance/Order'" type="button">
                           Charge & Order
                         </button>
                               <h1 class="myriad_pro_semibold">HEALTH INSURANCE AND PERSONAL ACCIDENT</h1>
