--- a/Project_sem_3/Views/Home/MotorInsurance.cshtml
+++ b/Project_sem_3/Views/Home/MotorInsurance.cshtml
@@ -19,8 +19,8 @@
                 <div>
                     <p>
                         <div class="block_button myriad_pro_semibold">
-                            @*<a href="https://localhost:44362/MotorInsurance/Order">CHARGE & ORDER</a>*@
-                            <button style="background-color:red;color:white" onclick="location.href='http://www.example.com'" type="button">
+                            @*<a href="/MotorInsurance/Order">CHARGE & ORDER</a>*@
+                            <button style="background-color:red;color:white" onclick="location.href='/MotorInsurance/Order'" type="button">
                                 Charge & Order
                             </button>
                         </div>
