--- a/Project_sem_3/Areas/Admin/Views/Role/CreateAdmin.cshtml
+++ b/Project_sem_3/Areas/Admin/Views/Role/CreateAdmin.cshtml
@@ -1,10 +1,11 @@
-﻿@model Project_sem_3.Models.RegisterViewModel
+﻿@model Project_sem_3.Models.CreateAdminModel
+
 @{
-    ViewBag.Title = "Register";
+    ViewBag.Title = "View";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
-<h2>@ViewBag.Title.</h2>
+<h2>View</h2>
 
 @using (Html.BeginForm("CreateAdmin", "Role", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
@@ -15,7 +16,7 @@
     <div class="form-group">
         @Html.LabelFor(m => m.RoleName, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
-            @Html.DropDownListFor(m => m.RoleName, new SelectList(ViewBag.Roles,"Value","Text"),new { @class = "col-md-2 control-label" })
+            @Html.DropDownListFor(m => m.RoleName, new SelectList(ViewBag.Roles, "Value", "Text"), new { @class = "col-md-2 control-label" })
         </div>
     </div>
     <div class="form-group">
