--- a/Project_sem_3/Views/Account/Register.cshtml
+++ b/Project_sem_3/Views/Account/Register.cshtml
@@ -36,9 +36,9 @@
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.Name, new { @class = "col-md-2 control-label" })
+        @Html.LabelFor(m => m.UserName, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
-            @Html.TextAreaFor(m => m.Name, new { @class = "form-control" })
+            @Html.TextAreaFor(m => m.UserName, new { @class = "form-control" })
         </div>
     </div>
     <div class="form-group">
