--- a/Project_sem_3/Views/Home/lifeInsurance.cshtml
+++ b/Project_sem_3/Views/Home/lifeInsurance.cshtml
@@ -18,7 +18,7 @@
             <div class="">
                 <div>
                     <p>
-                        <div class="block_button myriad_pro_semibold"><a href="https://localhost:44362/LifeInsurance/Order">CHARGE & ORDER</a></div>
+                        <div class="block_button myriad_pro_semibold"><a href="/LifeInsurance/Order">CHARGE & ORDER</a></div>
                         <h1>WHOLE LIFE INSURANCE - MORE THAN LOVE</h1>
                         <h3 class="font-text">HAPPINESS IS WHEN YOU ARE MADE SOMEBODY ELSE HAPPY</h3>
 
