--- a/Project_sem_3/Areas/Admin/Views/InsurancePackages/Index.cshtml
+++ b/Project_sem_3/Areas/Admin/Views/InsurancePackages/Index.cshtml
@@ -121,7 +121,7 @@
                 },
                 success: function (res) {
                     if (!res == false) {
-                        window.location.href = `/Admin/InsurancePackages`;
+                        window.location.reload;
                     }
                     },
                     error: function () {
