--- a/Project_sem_3/Areas/Admin/Views/Insurances/Index.cshtml
+++ b/Project_sem_3/Areas/Admin/Views/Insurances/Index.cshtml
@@ -100,7 +100,7 @@
                 },
                 success: function (res) {
                     if (!res == false) {
-                        window.location.href = `/Admin/Insurances`;
+                        window.location.reload;
                     }
                     },
                     error: function () {
