--- a/Project_sem_3/Areas/Admin/Views/Programmes/Index.cshtml
+++ b/Project_sem_3/Areas/Admin/Views/Programmes/Index.cshtml
@@ -102,7 +102,7 @@
                 },
                 success: function (res) {
                     if (!res == false) {
-                        window.location.href = `/Admin/Programmes`;
+                        window.location.reload;
                     }
                     },
                     error: function () {
