--- a/Project_sem_3/Areas/Admin/Views/Contracts/Index.cshtml
+++ b/Project_sem_3/Areas/Admin/Views/Contracts/Index.cshtml
@@ -150,7 +150,7 @@
                 },
                 success: function (res) {
                     if (!res == false) {
-                        window.location.href = `/Admin/Contracts`;
+                        window.location.reload();
                     }
                     },
                     error: function () {
