--- a/Project_sem_3/Areas/Admin/Views/Insurances/Index.cshtml
+++ b/Project_sem_3/Areas/Admin/Views/Insurances/Index.cshtml
@@ -16,7 +16,6 @@
         <!-- Page Heading -->
         <h1 class="h3 mb-2 text-gray-800">Insurance</h1>
         <p class="mb-4"> All contracts of customers about insurances .</p>
-        <button type="button" id="delete_checked">Delete Selected</button>
 
         <!-- DataTales Example -->
         <div class="card shadow mb-4">
@@ -28,6 +27,18 @@
                     <div id="dataTable_wrapper" class="dataTables_wrapper dt-bootstrap4">
                         <div class="row"><div class="col-sm-12 col-md-6"><div class="dataTables_length" id="dataTable_length"><label>Show <select name="dataTable_length" aria-controls="dataTable" class="custom-select custom-select-sm form-control form-control-sm"><option value="10">10</option><option value="25">25</option><option value="50">50</option><option value="100">100</option></select> entries</label></div></div><div class="col-sm-12 col-md-6"><div id="dataTable_filter" class="dataTables_filter"><label>Search:<input type="search" class="form-control form-control-sm" placeholder="" aria-controls="dataTable"></label></div></div></div>
                         <div class="row">
+                            <div class="col-3 mt-2">
+                                <div class="form-group mr-3">
+                                    <select class="form-control mr-2" id="select-action">
+                                        <option value="6">--Chọn thao tác--</option>
+                                        <option value="0">Action</option>
+                                        <option value="-1">Deleted</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="col-9">
+                                <button type="button" id="action_contract">Xác nhận</button>
+                            </div>
                             <div class="col-sm-12">
                                 <table class="table table-bordered dataTable" id="dataTable" width="100%" cellspacing="0" role="grid" aria-describedby="dataTable_info" style="width: 100%;">
                                     <thead>
@@ -39,7 +50,7 @@
                                         </tr>
                                     </thead>
                                     <tbody>
-                                    @foreach (var item in Model)
+                                        @foreach (var item in Model)
                                         {
                                             <tr role="row" class="odd">
                                                 <td>
@@ -52,9 +63,9 @@
                                                 <td>@item.CreatedAt</td>
 
                                                 <td>
-                                                        <button class="btn btn-success">@Html.ActionLink("Edit", "Edit", new { id = item.Id })</button>
-                                                        <button class="btn btn-primary">@Html.ActionLink("Details", "Details", new { id = item.Id })</button>
-                                                        <button class="btn btn-danger">@Html.ActionLink("Delete", "Delete", new { id = item.Id })</button>
+                                                    <button class="btn btn-success">@Html.ActionLink("Edit", "Edit", new { id = item.Id })</button>
+                                                    <button class="btn btn-primary">@Html.ActionLink("Details", "Details", new { id = item.Id })</button>
+                                                    <button class="btn btn-danger">@Html.ActionLink("Delete", "Delete", new { id = item.Id })</button>
                                                 </td>
                                             </tr>
                                         }
@@ -79,8 +90,13 @@
                 $(this).prop('checked'));
             })
             
-        $('#delete_checked').click(function () {
+        $('#action_contract').click(function () {
             var selectedIDs = new Array();
+            var action = $('#select-action').val();
+            if (action == 6) {
+                alert('Please select the action you want to perform!');
+                return;
+            }
             $('input:checkbox.check').each(function () {
                 if ($(this).prop('checked')) {
                     selectedIDs.push($(this).val());
@@ -96,11 +112,12 @@
                 dataType: "json",
                 data: {
                     __RequestVerificationToken: $('input[name=__RequestVerificationToken]').val(),
-                    selectedIDs
+                    selectedIDs,
+                    action
                 },
                 success: function (res) {
                     if (!res == false) {
-                        window.location.reload;
+                        window.location.reload();
                     }
                     },
                     error: function () {
